@@ -1894,7 +1894,7 @@ else:
 		sys.stderr.write("Failed to insert portage version in message!\n")
 		sys.stderr.flush()
 		portage_version = "Unknown"
-	unameout = platform.system() + " " + platform.release() + " "
+	unameout = platform.system() + " "
 	if platform.system() in ["Darwin", "SunOS"]:
 		unameout += platform.processor()
 	else:
