@@ -47,6 +47,11 @@ portage-2.1.6
   used in ACCEPT_KEYWORDS.
   For packages that don't specify any other KEYWORDS you can use the new **
   token as documented in portage(5) to disable KEYWORDS filtering completely.
+* When generating manifests, existing distfiles digests will not be updated
+  in cases when the current file in $DISTDIR does not match. In order to
+  force digests to be updated, run `ebuild --force <ebuild file> manifest`.
+  This is a safety measure which protects valid distfiles digests from being
+  accidentally replaced by invalid digests.
 
 portage-2.1.5
 ==================================
